--- a/style grid.css
+++ b/style grid.css
@@ -49,17 +49,19 @@
 .child {
     background-position: center;
     position: relative;
+    overflow: hidden;
 }
 
 .child p {
-    display: none;
+    display: block;
+    transform: translateY(-100%);
+    background-color: blue;
     font-family: 'Roboto-bold', sans-serif;
-    padding: 10px;  
+    padding: 10px;
 }
 
 .child:hover p {
-    display: block;
-    background-color: blue;
+    transform: translateY(0);
     transition-duration: 1s;
 }
 
